--- a/streamfield/templates/streamfield/_block.html
+++ b/streamfield/templates/streamfield/_block.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 <div class="stream-field__block">
+  <div class="stream-field__sortable-handler">
+    <div class="stream-field__sortable-icon"></div>
+  </div>
+
   <div class="stream-field__icon-holder">
     <img src="{% static icon %}" class="stream-field__icon" alt="">
   </div>
