--- a/streamfield/templates/streamfield/_block.html
+++ b/streamfield/templates/streamfield/_block.html
@@ -1,7 +1,7 @@
 {% load admin_urls %}
 {% load static %}
 
-<div class="stream-field__block">
+<div class="stream-field__block" data-uuid="{{ uuid }}">
   <div class="stream-field__sortable-handler">
     <div class="stream-field__sortable-icon"></div>
   </div>
