--- a/streamfield/static/streamfield/src/widget.scss
+++ b/streamfield/static/streamfield/src/widget.scss
@@ -17,6 +17,11 @@
     &:nth-of-type(n+2) {
       margin-top: 10px;
     }
+
+    &.sortable-ghost {
+      opacity: 0.75;
+      background-color: #feffd7;
+    }
   }
 
   &__sortable-handler {
@@ -30,10 +35,6 @@
     height: 100%;
     background: url(./img/sortable.svg);
     background-size: contain;
-  }
-
-  &__icon {
-    width: 24px;
   }
 
   &__title {
