--- a/streamfield/templates/streamfield/_valid_block.html
+++ b/streamfield/templates/streamfield/_valid_block.html
@@ -11,9 +11,19 @@
 
   <div class="stream-field__tools">
     <div class="btn-square-group">
+      {% if can_view_related or can_change_related %}
+        <a href="{{ change_related_url }}"
+           id="change_uuid_{{ uuid }}"
+           class="stream-field__change-btn btn btn-square btn-sm btn-square--info"
+           data-toggle="tooltip" data-placement="top" data-trigger="hover"
+           data-html="true" title="{% if can_change_related %}{{ _("Change block") }}{% else %}{{ _("View block") }}{% endif %}">
+          <i class="fa {% if can_change_related %}fa-pencil{% else %}fa-eye{% endif %}"></i>
+        </a>
+      {% endif %}
+
       <button type="button" class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
               data-toggle="tooltip" data-placement="top" data-trigger="hover"
-              data-html="true" title="{{ _("Delete") }}">
+              data-html="true" title="{{ _("Delete block") }}">
         <i class="fa fa-trash"></i>
       </button>
     </div>
