--- a/streamfield/static/streamfield/src/widget.scss
+++ b/streamfield/static/streamfield/src/widget.scss
@@ -54,7 +54,7 @@
   &__sortable-icon {
     width: 16px;
     height: 100%;
-    background: url(./img/sortable.svg);
+    background: url("./img/sortable.svg");
     background-size: contain;
   }
 
