--- a/streamfield/templates/streamfield/_valid_block.html
+++ b/streamfield/templates/streamfield/_valid_block.html
@@ -4,9 +4,9 @@
   </div>
 
   <div class="stream-field__title">
-    {{ instance }}
+    {{ title }}
     <br>
-    <small class="text-muted">{{ opts.verbose_name }}</small>
+    <small class="text-muted">{{ description }}</small>
   </div>
 
   <div class="stream-field__tools">
@@ -21,7 +21,8 @@
         </a>
       {% endif %}
 
-      <button type="button" class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
+      <button type="button"
+              class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
               data-toggle="tooltip" data-placement="top" data-trigger="hover"
               data-html="true" title="{{ _("Delete block") }}">
         <i class="fa fa-trash"></i>
