--- a/streamfield/static/streamfield/src/widget.scss
+++ b/streamfield/static/streamfield/src/widget.scss
@@ -5,7 +5,7 @@
   }
 
   &__container {
-    overflow: auto;  // fix toolbar margin-top
+    padding-bottom: 5px;
     min-height: 50px;
 
     &:after {
@@ -77,6 +77,28 @@
 
   &__tools {
     margin-left: auto;
+  }
+
+  &__dropdown {
+    overflow: auto;
+    max-height: 210px;
+    border: 1px solid #444;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 0 1px #444;
+
+    .dropdown-item {
+      &:focus {
+        background-color: #e9ecef;
+        color: #1d1d1d;
+        box-shadow: none;
+      }
+
+      &:hover {
+        background-color: #79aec8;
+        color: #fff;
+        font-weight: 400;
+      }
+    }
   }
 
 
