--- a/streamfield/templates/streamfield/valid_block.html
+++ b/streamfield/templates/streamfield/valid_block.html
@@ -7,7 +7,7 @@
     <div class="stream-field__title">
       {{ title }}
       <br>
-      <small class="text-muted">{{ description }}</small>
+      <small class="text-muted">{{ verbose_name }}</small>
     </div>
 
     <div class="stream-field__tools">
@@ -25,14 +25,17 @@
         </a>
         {{ /change_button.show }}
 
-        {{ #delete_button }}
+        {{ #delete_button.show }}
         <button type="button"
                 class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
-                data-toggle="tooltip" data-placement="top" data-trigger="hover"
-                data-html="true" title="{{ delete_button.title }}">
+                data-toggle="tooltip"
+                data-placement="top"
+                data-trigger="hover"
+                data-html="true"
+                title="{{ delete_button.title }}">
           <i class="fa {{ delete_button.icon }}"></i>
         </button>
-        {{ /delete_button }}
+        {{ /delete_button.show }}
       </div>
     </div>
   </div>
