--- a/streamfield/templates/streamfield/admin/invalid_block.html
+++ b/streamfield/templates/streamfield/admin/invalid_block.html
@@ -1,18 +1,21 @@
-{% verbatim %}<template class="stream-field__block-template--invalid">
-  <div class="stream-field__block stream-field__block--invalid" data-uuid="{{ uuid }}">
-    <div class="stream-field__sortable-handler">
-      <div class="stream-field__sortable-icon"></div>
-    </div>
+{% load i18n %}
 
+<div class="stream-field__block stream-field__block--invalid" data-uuid="{{ uuid }}">
+  <div class="stream-field__sortable-handler">
+    <div class="stream-field__sortable-icon"></div>
+  </div>
+
+  {% block content %}
     <div class="stream-field__title stream-field__title--invalid">
       {{ title }}
       <br>
-      <small class="text-muted">{{ model }} (Primary key: {{ pk }})</small>
+      <small class="text-muted">{{ model }} ({% trans "Primary key" %}: {{ pk }})</small>
     </div>
+  {% endblock content %}
 
+  {% block tools %}
     <div class="stream-field__tools">
       <div class="btn-square-group">
-        {{ #delete_button.show }}
         <button type="button"
                 class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
                 data-toggle="tooltip"
@@ -22,8 +25,7 @@
                 title="{{ delete_button.title }}">
           <i class="fa {{ delete_button.icon }}"></i>
         </button>
-        {{ /delete_button.show }}
       </div>
     </div>
-  </div>
-</template>{% endverbatim %}
+  {% endblock tools %}
+</div>
