--- a/streamfield/templates/streamfield/admin/invalid_block.html
+++ b/streamfield/templates/streamfield/admin/invalid_block.html
@@ -20,7 +20,7 @@
             data-trigger="hover"
             data-html="true"
             title="{{ delete_button.title }}">
-      <i class="fa {{ delete_button.icon }}"></i>
+      <i class="{{ delete_button.icon }}"></i>
     </button>
   </div>
 {% endblock %}
