--- a/streamfield/templates/streamfield/admin/toolbar.html
+++ b/streamfield/templates/streamfield/admin/toolbar.html
@@ -2,7 +2,7 @@
 
 <div class="stream-field__dropdown dropdown d-inline-block">
   <button class="btn-success btn dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-    <i class="fa fa-plus"></i>
+    <i class="bi-plus-lg"></i>
     {% trans "Create new block" %}
   </button>
   <ul class="stream-field__dropdown-menu dropdown-menu">
@@ -21,7 +21,7 @@
 
 <div class="stream-field__dropdown dropdown d-inline-block">
   <button class="btn-info btn dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-    <i class="fa fa-search"></i>
+    <i class="bi-search"></i>
     {% trans "Lookup block" %}
   </button>
   <ul class="stream-field__dropdown-menu dropdown-menu">
