--- a/streamfield/templates/streamfield/widget.html
+++ b/streamfield/templates/streamfield/widget.html
@@ -1,4 +1,5 @@
 <div class="stream-field"
+     data-xclass="paper-streamfield"
      data-render-stream-url="{% url "streamfields:render-stream" %}"
      data-render-toolbar-url="{% url "streamfields:render-toolbar" %}">
   <textarea name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %}>{{ widget.value|default:"" }}</textarea>
