--- a/tests/blocks/templates/blocks/admin/image.html
+++ b/tests/blocks/templates/blocks/admin/image.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="d-flex">
     <div class="flex-grow-0">
-      <div class="preview" style="width: 38px; height: 38px; background: url({{ instance.image.url }}) center / cover"></div>
+      <div class="preview" style="width: 38px; height: 38px; background: url({{ instance.image }}) center / cover"></div>
     </div>
     <div class="ml-2">
       {{ block.super }}
