--- a/streamfield/static/streamfield/src/widget.scss
+++ b/streamfield/static/streamfield/src/widget.scss
@@ -81,10 +81,10 @@
   }
 
   // ============
-  //   Toolbar
+  //   Buttons
   // ============
 
-  &__toolbar {
+  &__buttons {
     margin-top: 2px;
   }
 
