--- a/streamfield/static/streamfield/src/widget.scss
+++ b/streamfield/static/streamfield/src/widget.scss
@@ -41,7 +41,7 @@
     }
 
     &--invalid {
-      color: var(--input-invalid-color, #d04010);
+      color: #d04010;
       box-shadow: 0 0 0 2px var(--input-invalid-border-color, #df7d5c);
     }
   }
@@ -89,7 +89,7 @@
   &__buttons {
     display: flex;
     margin-top: 2px;
-    gap: 8px;
+    gap: 6px;
   }
 
   &__dropdown {
