--- a/tests/blocks/templates/blocks/admin/image.html
+++ b/tests/blocks/templates/blocks/admin/image.html
@@ -3,10 +3,30 @@
 {% block content %}
   <div class="d-flex">
     <div class="flex-grow-0">
-      <div class="preview" style="width: 38px; height: 38px; background: url({{ instance.image }}) center / cover"></div>
+      <img class="preview"
+           src="{{ instance.image }}"
+           alt="{{ title }}"
+           width="48"
+           height="36"
+           style="object-fit: cover">
     </div>
     <div class="ml-2">
       {{ block.super }}
     </div>
   </div>
 {% endblock content %}
+
+
+{% block tools %}
+  <a href="{{ instance.image }}"
+     class="btn btn-square btn-sm btn-square--info bi-eye"
+     data-xclass="bs-tooltip"
+     data-placement="top"
+     data-trigger="hover"
+     data-html="true"
+     title="{{ _("View image") }}"
+     target="_blank">
+  </a>
+
+  {{ block.super }}
+{% endblock %}
