--- a/streamfield/templates/streamfield/admin/block.html
+++ b/streamfield/templates/streamfield/admin/block.html
@@ -1,39 +1,53 @@
-<div class="{% block classes %}stream-field__block{% endblock classes %}" data-uuid="{{ uuid }}">
+{% load admin_urls %}
+
+<div class="stream-field__block {% block extra_classes %}{% endblock extra_classes %}" data-uuid="{{ uuid }}">
   <div class="stream-field__sortable-handler">
     <div class="stream-field__sortable-icon"></div>
   </div>
 
-  <div class="stream-field__content">
-    {% block content %}
-      <p class="stream-field__title">{{ title }}</p>
-      <p class="stream-field__type">{{ verbose_name }}</p>
-    {% endblock content %}
-  </div>
-
-  <div class="stream-field__block-tools">
-    <div class="btn-square-group">
-      {% block tools %}
-        {% if change_button.show %}
-          <a href="{{ change_button.url }}"
-             id="change_uuid_{{ uuid }}"
-             class="stream-field__change-btn btn btn-square btn-sm btn-square--info {{ change_button.icon }}"
-             data-xclass="bs-tooltip"
-             data-placement="top"
-             data-trigger="hover"
-             data-html="true"
-             title="{{ change_button.title }}">
-          </a>
-        {% endif %}
-
-        <button type="button"
-                class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger {{ delete_button.icon }}"
-                data-xclass="bs-tooltip"
-                data-placement="top"
-                data-trigger="hover"
-                data-html="true"
-                title="{{ delete_button.title }}">
-        </button>
-      {% endblock %}
+  {% block content %}
+    <div class="stream-field__content">
+      <p class="stream-field__title">{{ instance }}</p>
+      <p class="stream-field__type">{{ opts.verbose_name }}</p>
     </div>
-  </div>
+  {% endblock content %}
+
+  {% block tools %}
+    <div class="stream-field__block-tools">
+      <div class="btn-square-group">
+        {% block tool-items %}
+          {% if has_change_permission %}
+            <a href="{% url opts|admin_urlname:"change" instance.pk|admin_urlquote %}"
+               id="change_uuid_{{ uuid }}"
+               class="stream-field__change-btn btn btn-square btn-sm btn-square--info bi-pencil-square"
+               data-xclass="bs-tooltip"
+               data-placement="top"
+               data-trigger="hover"
+               data-html="true"
+               title="{{ _("Change") }}">
+            </a>
+          {% elif has_view_permission %}
+            <a href="{% url opts|admin_urlname:"change" instance.pk|admin_urlquote %}"
+               id="change_uuid_{{ uuid }}"
+               class="stream-field__change-btn btn btn-square btn-sm btn-square--info bi-eye"
+               data-xclass="bs-tooltip"
+               data-placement="top"
+               data-trigger="hover"
+               data-html="true"
+               title="{{ _("View") }}">
+            </a>
+          {% endif %}
+
+          <button type="button"
+                  class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger bi-trash"
+                  data-xclass="bs-tooltip"
+                  data-placement="top"
+                  data-trigger="hover"
+                  data-html="true"
+                  title="{{ _("Delete") }}">
+          </button>
+        {% endblock tool-items %}
+      </div>
+    </div>
+  {% endblock tools %}
 </div>
