--- a/streamfield/templates/streamfield/admin/invalid_block.html
+++ b/streamfield/templates/streamfield/admin/invalid_block.html
@@ -1,26 +1,25 @@
 {% extends "streamfield/admin/block.html" %}
-
 {% load i18n %}
 
 
-{% block classes %}stream-field__block stream-field__block--invalid{% endblock classes %}
+{% block extra_classes %}stream-field__block--invalid{% endblock extra_classes %}
+
 
 {% block content %}
-  {{ title }}
-  <br>
-  <small class="text-muted">{{ model }} ({% trans "Primary key" %}: {{ pk }})</small>
+  <div class="stream-field__content">
+    <p class="stream-field__title">{% blocktrans with reason=reason %}Error: {{ reason }}{% endblocktrans %}</p>
+    <p class="stream-field__type">{{ model }} #{{ pk }}</p>
+  </div>
 {% endblock content %}
 
-{% block tools %}
-  <div class="btn-square-group">
-    <button type="button"
-            class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger"
-            data-toggle="tooltip"
-            data-placement="top"
-            data-trigger="hover"
-            data-html="true"
-            title="{{ delete_button.title }}">
-      <i class="{{ delete_button.icon }}"></i>
-    </button>
-  </div>
-{% endblock %}
+
+{% block tool-items %}
+  <button type="button"
+          class="stream-field__delete-btn btn btn-square btn-sm btn-square--danger bi-trash"
+          data-xclass="bs-tooltip"
+          data-placement="top"
+          data-trigger="hover"
+          data-html="true"
+          title="{{ _("Delete") }}">
+  </button>
+{% endblock tool-items %}
