--- a/streamfield/templates/streamfield/admin/block.html
+++ b/streamfield/templates/streamfield/admin/block.html
@@ -1,6 +1,6 @@
 {% load admin_urls %}
 
-<div class="stream-field__block {% block extra_classes %}{% endblock extra_classes %}" data-uuid="{{ uuid }}">
+<div class="stream-field__block {% block extra_classes %}{% endblock extra_classes %}{% if not visible %} stream-field--hidden{% endif %}" data-uuid="{{ uuid }}">
   <div class="stream-field__sortable-handler">
     <div class="stream-field__sortable-icon"></div>
   </div>
@@ -14,6 +14,18 @@
 
   {% block tools %}
     <div class="stream-field__block-tools">
+      {% if has_change_permission or has_view_permission %}
+        <div class="stream-field__visibility-switch custom-control custom-switch"
+             data-xclass="bs-tooltip"
+             data-placement="top"
+             data-trigger="hover"
+             data-html="true"
+             title="{{ _("Visibility") }}">
+          <input type="checkbox" class="custom-control-input" id="show_{{ uuid }}"{% if visible %} checked{% endif %}>
+          <label class="custom-control-label" for="show_{{ uuid }}"></label>
+        </div>
+      {% endif %}
+
       <div class="btn-square-group">
         {% block tool-items %}
           {% if has_change_permission %}
